# url-alias-service

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci-cd-docker.yml  ci-cd.yml  ci-docker.yml  ci.yml
app/: main.py
app/api/v1/: auth.py  redirect.py  router.py  urls.py
app/auth/: security.py  utils.py
app/core/: config.py  logging.py
app/db/: session.py
app/db/crud/: url.py  user.py
app/db/models/: __init__.py  url.py  user.py
app/lifecycle/: lifespan_events.py
app/middleware/: auth.py  setup.py
app/schemas/: url.py  user.py
app/services/: url_service.py  user_service.py
http/: auth.http  redirect.http  urls.http
migrations/: env.py
migrations/versions/: a082fe52aacf_fix_expires_at.py  e5828c5ba8cc_add_user_id_to_urls.py  f33b70fdb0aa_init_migration.py
tests/: conftest.py
tests/integration/: test_auth.py  test_middleware.py  test_redirect.py  test_session.py  test_urls.py
tests/unit/: test_lifecycle.py  test_security.py  test_url_service.py  test_user_service.py
tests/utils/: db_mocks.py
