[tool.poetry]
name = "url-alias-service"
version = "0.1.0"
description = "REST API for URL shortening service"
authors = ["Neizvestnyj"]
license = "MIT"
# readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi =  "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.2" }
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
pydantic = {extras = ["email"], version = "^2.11.5"}
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic-settings = "^2.9.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pre-commit = "^4.0.1"
gevent = "^25.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=html"
testpaths = "tests"
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ['py311']  # Python 3.11, как в ruff.toml

[tool.coverage.run]
concurrency = ["gevent"]
